cmake_minimum_required(VERSION 3.17)
project(chuck_duckhoo)

set(CMAKE_CXX_STANDARD 17)

add_executable(chuck_duckhoo boj/stdin-stdout/2557.cc boj/stdin-stdout/1000.cc boj/stdin-stdout/2558.cc boj/stdin-stdout/10950.cc boj/stdin-stdout/10951.cc boj/stdin-stdout/10952.cc boj/stdin-stdout/10953.cc boj/stdin-stdout/11021.cc boj/stdin-stdout/11022.cc boj/stdin-stdout/11718.cc boj/stdin-stdout/11719.cc boj/stdin-stdout/11720.cc boj/stdin-stdout/11721.cc)