cmake_minimum_required(VERSION 3.17)
project(chuck_duckhoo)

set(CMAKE_CXX_STANDARD 17)

add_executable(chuck_duckhoo boj/stdin-stdout/2557.cc boj/stdin-stdout/1000.cc boj/stdin-stdout/2558.cc boj/stdin-stdout/10950.cc boj/stdin-stdout/10951.cc boj/stdin-stdout/10952.cc boj/stdin-stdout/10953.cc boj/stdin-stdout/11021.cc boj/stdin-stdout/11022.cc boj/stdin-stdout/11718.cc boj/stdin-stdout/11719.cc boj/stdin-stdout/11720.cc boj/stdin-stdout/11721.cc boj/stdin-stdout/2741.cpp boj/stdin-stdout/1924.cc boj/stdin-stdout/2438.cc boj/stdin-stdout/2439.cc boj/stdin-stdout/2440.cc boj/stdin-stdout/2441.cc boj/stdin-stdout/2442.cc boj/stdin-stdout/2739.cc boj/stdin-stdout/2742.cc boj/stdin-stdout/8393.cc boj/stdin-stdout/10818.cc)