cmake_minimum_required(VERSION 3.17)
project(chuck_duckhoo)

set(CMAKE_CXX_STANDARD 17)

add_executable(chuck_duckhoo boj/stdin-stdout/2557.cc boj/stdin-stdout/sum/1000.cc boj/stdin-stdout/sum/2558.cc boj/stdin-stdout/sum/10950.cc boj/stdin-stdout/sum/10951.cc boj/stdin-stdout/sum/10952.cc boj/stdin-stdout/sum/10953.cc boj/stdin-stdout/sum/11021.cc boj/stdin-stdout/sum/11022.cc boj/stdin-stdout/string/11718.cc boj/stdin-stdout/string/11719.cc boj/stdin-stdout/string/11720.cc boj/stdin-stdout/string/11721.cc boj/stdin-stdout/2741.cc boj/stdin-stdout/1924.cc boj/stdin-stdout/star/2438.cc boj/stdin-stdout/star/2439.cc boj/stdin-stdout/star/2440.cc boj/stdin-stdout/star/2441.cc boj/stdin-stdout/star/2442.cc boj/stdin-stdout/2739.cc boj/stdin-stdout/2742.cc boj/stdin-stdout/8393.cc boj/stdin-stdout/10818.cc boj/stdin-stdout/star/2445.cc boj/stdin-stdout/star/2446.cc boj/stdin-stdout/star/2522.cc boj/stdin-stdout/star/10991.cc boj/stdin-stdout/star/10992.cc boj/stdin-stdout/sandbox/sandbox.cc)